chore: Update styles and fix overflow issues in Slider and Contact components

--- a/src/app.scss
+++ b/src/app.scss
@@ -5,7 +5,11 @@
   }
 }
 
-html,
-body {
+body,
+html {
+  margin: 0;
+  padding: 0;
   font-family: "Helvetica Neue", sans-serif;
+  box-sizing: border-box;
+  overflow-x: hidden; /* Assure qu'il n'y a pas de défilement horizontal globalement */
 }
