--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -2,13 +2,14 @@
   height: calc(100vh - 80px);
   width: 100vw;
   position: relative;
-  overflow: hidden;
+  overflow: hidden; /* Masque les barres de défilement horizontales et verticales */
 
   .container {
     width: 300vw;
     height: 100%;
     display: flex;
     transition: all 1s ease;
+    overflow: hidden; /* Assure que les barres de défilement ne s'affichent pas dans le conteneur */
 
     img {
       width: 100vw;
@@ -31,7 +32,6 @@
     .icon {
       width: 50px;
       height: 50px;
-      //   border: 1px solid #999;
       border: 1px solid white;
       display: flex;
       align-items: center;
